# agent-workflow

./: .gitignore  AGENTS.md  README.md  go.mod  go.sum  pyproject.toml
cmd/worker/: main.go
docs/: review-improvements.md
internal/meta/: meta.go
internal/model/: types.go
internal/runner/: runner.go
internal/taktrun/: taktrun.go
internal/verifier/: verifier.go
internal/workflows/: ebtemp.go  meta.go  takt.go
scripts/: aw  test-takt-supervisor.shx  test.bashx  test.shx
src/agent_workflow/: __init__.py  __main__.py  analytics.py  cli.py  config.py  merge.py  pipeline.py  repair.py  runner.py  state.py  telemetry.py  tracing.py  tui.py  tui_components.py
src/agent_workflow/analytics/: __init__.py  artifacts.py  attempts.py  constants.py  measurements.py  normalization.py  reporter.py  reporting.py  run_detail.py  schema.py  store.py
src/agent_workflow/notify/: __init__.py  discord.py  provider.py
src/agent_workflow/storage/: __init__.py  schema.py  store.py
src/agent_workflow/tui/: __init__.py  app.py  commands.py  constants.py  content.py  rendering.py  state.py
src/agent_workflow/tui_components/: __init__.py  artifact.py  attempts.py  controller.py  dashboard.py  detail.py  events.py  logs.py  result.py
tests/: test_config.py  test_lightweight_runner.py  test_merge_commands.py  test_notification_provider.py  test_pipeline_tui.py  test_repair_flow_e2e.py  test_storage.py  test_telemetry.py  test_tui_imports.py
