[project]
name = "agent-workflow"
version = "0.1.0"
description = "ローカルのエージェントワークフロー向けの再開可能な軽量ランナー"
requires-python = ">=3.11"

[project.optional-dependencies]
otel = [
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]

